# nzxt-rust-devices

./: .gitignore  Cargo.toml  README.md
docs/: protocol_analysis.md
examples/: radial_preview.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/cooling/: controller.rs  mod.rs
src/device/: bucket_manager.rs  bulk.rs  kraken.rs  mod.rs
src/protocol/: commands.rs  mod.rs  status.rs
src/storage/: defaults.rs  mod.rs  profiles.rs  types.rs
src/utils/: image_processing.rs  mod.rs  parsing.rs  radial_gauge.rs  sensors.rs  stats_image.rs
