[package]
name = "nzxt-rust-devices"
version = "0.1.0"
edition = "2024"
description = "Rust driver for NZXT Kraken Z-series liquid coolers"
license = "MIT"
repository = "https://github.com/brittos/nzxt-rust-devices"
keywords = ["nzxt", "kraken", "hid", "cooling", "hardware"]
categories = ["hardware-support"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"

# HID communication
hidapi = "2.6"

# CLI
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

# JSON parsing and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# Image processing
image = "0.24"
byteorder = "1.5"
sysinfo = { version = "0.37.2", features = ["windows"] }

# Text rendering on images
imageproc = "0.23"
rusttype = "0.9"

# USB bulk transfers (for LCD images)
nusb = "0.1"
futures-lite = "2.5"

[dev-dependencies]
# Add test dependencies here if needed

[[bin]]
name = "nzxt-kraken-cli"
path = "src/main.rs"

[lib]
name = "nzxt_rust_devices"
path = "src/lib.rs"
